# dxf-nesting

./: Dockerfile  README.md  convert_dxf_to_svg.py  main.py  or_app.py  packer.py  pynest.py  pyproject.toml  svgpack.py
data/input/: piece0.dxf  piece1.dxf  piece10.dxf  piece2.dxf  piece3.dxf  piece5.dxf  piece6.dxf  piece8.dxf  piece9.dxf
data/input/dxf/: piece4.dxf  piece7.dxf
data/output/: 1738671199.916368output.dxf  1738740308.469106output.dxf  1738740514.823953output.dxf  1738740991.836732output.dxf  1738741140.133815output.dxf
data/output/dxf/: 1738671130.977929output.dxf  1738741083.632051output.dxf  output.dxf
examples/output/dxf/: nested_svg_1738916151.235526.dxf  nested_svg_1738917325.423232.dxf  nested_svg_1738931772.425088.dxf  nested_svg_1738932327.763459.dxf  nested_svg_1738933466.634847.dxf  nested_svg_1738933489.146415.dxf  nested_svg_1738933654.94836.dxf  nested_svg_1738934127.743697.dxf  nested_svg_1738934507.890597.dxf  nested_svg_1738934948.188162.dxf  nested_svg_1738936248.250235.dxf  nested_svg_1738936628.408164.dxf  nested_svg_1738936649.086002.dxf  nested_svg_1738955144.726105.dxf
src/: converter.py  svg_packer.py  svgpack.py
